--- a/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.css
+++ b/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.css
@@ -99,3 +99,8 @@ h2.card-sec-title {
 .card-text {
     padding: 2em;
 }
+
+.btn-group.btn-group-sm.float-right > a.btn,
+.btn-group.btn-group-sm.float-right > button.btn {
+    border-radius: 0;
+}
