--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,18 @@ h1, h2, h3 {
     /*box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.2);*/
 }
 
+hr.inset-hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #fff;
+    margin: 2.5em 0;
+}
+
+.inner-card {
+    border-radius: 0;
+}
+
 h1.admin-badge, h1.admin-badge > i.fa {
     background-color: #848484;
     color: transparent;
