--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-3">
                 <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/DDW_50_Yrs_Stand-alone_logo_gold_on_dark_rgb.png"
                      alt="DDW 50 years logo"
-                     class="img-fluid">
+                     class="img-fluid mb-3">
             </div>
             <div class="col-md-6">
                 <p class="apps">Plan Your Itinerary with the Free DDW Mobile App.</p>
