Fixed card bug where I left over a CSS class

--- a/src/app/components/pages/attendee-planning/attendee-planning.component.html
+++ b/src/app/components/pages/attendee-planning/attendee-planning.component.html
@@ -70,7 +70,7 @@
                         <img class="card-img-top"
                              [src]="pageCard1.photoURL"
                              [alt]="pageCard1.title">
-                        <div class="card-body d-flex">
+                        <div class="card-body">
                             <h5 class="card-title">{{ pageCard1.title }}</h5>
                             <p class="card-text">{{ pageCard1.body }}</p>
                             <p class="text-center">
@@ -93,7 +93,7 @@
                         <img class="card-img-top"
                              [src]="pageCard2.photoURL"
                              [alt]="pageCard2.title">
-                        <div class="card-body d-flex">
+                        <div class="card-body">
                             <h5 class="card-title">{{ pageCard2.title }}</h5>
                             <p class="card-text">{{ pageCard2.body }}</p>
                             <p class="text-center">
@@ -116,7 +116,7 @@
                         <img class="card-img-top"
                              [src]="pageCard3.photoURL"
                              [alt]="pageCard3.title">
-                        <div class="card-body d-flex">
+                        <div class="card-body">
                             <h5 class="card-title">{{ pageCard3.title }}</h5>
                             <p class="card-text">{{ pageCard3.body }}</p>
                             <p class="text-center">
@@ -138,6 +138,8 @@
             </div>
         </div>
     </div>
+
+
     <!-- * AD Footerbar * -->
     <div class="row" *ngIf="footerbar">
         <div class="container">
