Added Dashboard page with Google Analytics Data Studio

--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -92,6 +92,12 @@
                     </div>
                     <div class="col-md-6">
                         <div class="text-right m-2">
+                            <a [routerLink]="['/admin/dashboard']"
+                               class="btn btn-outline-dark borderless">
+                                <i class="fa fa-chart-pie"></i>&nbsp;Google Analytics Dashboard
+                            </a>
+                        </div>
+                        <div class="text-right m-2">
                             <a [routerLink]="['/admin/meta']"
                                class="btn btn-outline-dark borderless">
                                 <i class="fa fa-chart-line"></i>&nbsp;Edit Meta/Scripts
