--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -1,7 +1,7 @@
 <!-- Brand demo (see assets/css/demo/demo.css) -->
 <div class="app-brand demo pt-4 pb-3">
               <span class="app-brand-logo demo">
-              <a [routerLink]="['/admin']">
+              <a [routerLink]="['/admin/dashboard']">
                       <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png"
                            alt="ddw logo" class="ddw-logo img-fluid p-1">
               </a>
@@ -219,6 +219,13 @@
         <a [routerLink]="['/admin/settings']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
             <div><i class="fal fa-wrench"></i>&nbsp;<span class="helv">Settings</span></div>
+        </a>
+    </li>
+
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/dashboard']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-chart-pie"></i>&nbsp;<span class="helv">Analytics</span></div>
         </a>
     </li>
 
