Fixed issue with dark custom links on homepage navbar

--- a/src/app/components/core/navbar/navbar.component.css
+++ b/src/app/components/core/navbar/navbar.component.css
@@ -23,6 +23,10 @@ li.dropdown-item a {
     font-size: 14px;
 }
 
+a.light-link {
+    color: #fff !important;
+}
+
 /* Colin's Addition */
 /*li.dropdown-item:hover, li.dropdown-item *:hover, li.dropdown-item *:active, li.dropdown-item > a:link:hover {*/
 /*background-color: #eeeeee !important;*/
