--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -182,7 +182,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url1">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [routerLink]="[customLinks.url1]"
                                                    tabindex="-1"
                                                    *ngIf="customLinks.url1 && !customLinks.isExtURL1">
@@ -193,7 +193,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url1">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [href]="customLinks.url1"
                                                    tabindex="-1"
                                                    target="_blank"
@@ -206,7 +206,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url2">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [routerLink]="[customLinks.url2]"
                                                    tabindex="-1"
                                                    *ngIf="customLinks.url2 && !customLinks.isExtURL2">
@@ -217,7 +217,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url2">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [href]="customLinks.url2"
                                                    tabindex="-1"
                                                    target="_blank"
@@ -230,7 +230,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url3">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [routerLink]="[customLinks.url3]"
                                                    tabindex="-1"
                                                    *ngIf="customLinks.url3 && !customLinks.isExtURL3">
@@ -241,7 +241,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url3">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [href]="customLinks.url3"
                                                    tabindex="-1"
                                                    target="_blank"
@@ -254,7 +254,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url4">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [routerLink]="[customLinks.url4]"
                                                    tabindex="-1"
                                                    *ngIf="customLinks.url4 && !customLinks.isExtURL4">
@@ -265,7 +265,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url4">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [href]="customLinks.url4"
                                                    tabindex="-1"
                                                    target="_blank"
@@ -278,7 +278,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url5">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [routerLink]="[customLinks.url5]"
                                                    tabindex="-1"
                                                    *ngIf="customLinks.url5 && !customLinks.isExtURL5">
@@ -289,7 +289,7 @@
                                                 class="static"
                                                 style="position: relative; float: left;"
                                                 *ngIf="customLinks.url5">
-                                                <a class="level1 MPAuxNav static"
+                                                <a class="level1 MPAuxNav static light-link"
                                                    [href]="customLinks.url5"
                                                    tabindex="-1"
                                                    target="_blank"
