--- a/src/styles.css
+++ b/src/styles.css
@@ -316,13 +316,10 @@ a.btn.btn-warning.btn-lg:hover {
     margin: 2em 0 0 0;
 }
 
-#prAdSpace {
-    /*margin: 2em 0 0 0;*/
+#prAdSpace, #myAdSpace, #prmyAdSpace {
+    margin: 2em 0 0 0;
 }
 
-#myAdSpace {
-    /*margin: 2em 0 0 0;*/
-}
 
 /* Cavin's Custom */
 
