Added Privacy Policy to the Front End

--- a/src/app/components/admin/admin-core/admin-privacy-policy/admin-privacy-policy.component.html
+++ b/src/app/components/admin/admin-core/admin-privacy-policy/admin-privacy-policy.component.html
@@ -16,9 +16,11 @@
 
 <div class="row m-4 pl-5">
     <div class="container">
-        <a [routerLink]="['/admin/settings']" class="btn btn-default">
-            <i class="fal fa-arrow-circle-left"></i>&nbsp;Settings
-        </a>
+        <div class="offset-md-10">
+            <a [routerLink]="['/admin/settings']" class="btn btn-default">
+                <i class="fal fa-wrench"></i>&nbsp;Settings
+            </a>
+        </div>
     </div>
 </div>
 
