--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -180,7 +180,11 @@
         <div class="row">
             <div class="col-md-6 pl-5">
                 <p class="copy">
-                    &nbsp;Privacy Policy | &copy; 2018 Digestive Disease Week. All Rights Reserved.
+                    <a [routerLink]="['/privacy']"
+                       class="text-white text-decoration-none">
+                        Privacy Policy | &copy; 2018 Digestive Disease Week. All
+                        Rights Reserved.
+                    </a>
                 </p>
             </div>
             <div class="col text-right pr-5">
