--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -3,10 +3,10 @@
         <div class="card admin-badge-card">
             <div class="card-body">
                 <h1 class="text-center pb-4 pt-3 admin-badge">
-               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
-                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fa fa-wrench"></i>&nbsp;Admin
-                     Settings
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-wrench"></i>&nbsp;Admin
+                    Settings
                 </h1>
             </div>
         </div>
@@ -131,6 +131,12 @@
                             <a [routerLink]="['/admin/calendar']"
                                class="btn btn-outline-dark borderless">
                                 <i class="fa fa-calendar"></i>&nbsp;Edit Calendar
+                            </a>
+                        </div>
+                        <div class="text-right m-2">
+                            <a [routerLink]="['/admin/privacy-policy']"
+                               class="btn btn-outline-dark borderless">
+                                <i class="fa fa-file-signature"></i>&nbsp;Edit Privacy Policy
                             </a>
                         </div>
                     </div>
