--- a/src/app/components/core/privacy-policy/privacy-policy.component.html
+++ b/src/app/components/core/privacy-policy/privacy-policy.component.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="privacyPolicy">
     <div class="container-fluid body-container">
         <div [innerHTML]="privacyPolicy.body | safeHtml"></div>
     </div>
