--- a/src/app/components/pages/press-releases/press-releases-details/press-releases-details.component.html
+++ b/src/app/components/pages/press-releases/press-releases-details/press-releases-details.component.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container-fluid" style="max-width:1200px;">
-            <ol class="breadcrumb">
+        <div class="container-fluid pl-0" style="max-width:1200px;">
+            <ol class="breadcrumb pl-0">
                 <li class="breadcrumb-item text-dark">
                     News /
                     <a [routerLink]="['/news/press-releases']"
