--- a/src/app/components/pages/attendee-planning/attendee-planning.component.html
+++ b/src/app/components/pages/attendee-planning/attendee-planning.component.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container">
-            <ol class="breadcrumb">
+        <div class="container pl-0">
+            <ol class="breadcrumb pl-0">
                 <li class="breadcrumb-item">
                     <div class="text-capitalize text-decoration-none text-dark">
                         {{ page.category }}
@@ -37,8 +37,11 @@
 
     <div class="row">
         <div class="container-fluid body-container">
-            <img [src]="page.photoURL"
-                 class="photoURL">
+            <div class="image-container">
+                <img [src]="page.photoURL"
+                     class="photoURL">
+            </div>
+
             <div [innerHTML]="page.body | safeHtml"></div>
         </div>
     </div>
