--- a/src/app/components/pages/exhibitor-information/exhibitor-information.component.css
+++ b/src/app/components/pages/exhibitor-information/exhibitor-information.component.css
@@ -32,16 +32,20 @@ h1.title {
     font-weight: bold;
 }
 
-p {
-
-}
-
 .row.crumbs {
     padding: 2em 0;
 }
 
 ol.breadcrumb, li.breadcrumb-item {
     background-color: #fff;
+}
+
+.image-container {
+    float: right;
+    min-height: 305px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 img.photoURL {
@@ -66,10 +70,6 @@ h2.card-sec-title {
 
 .card-body {
     line-height: 2em;
-}
-
-.card-text {
-    padding: 2em;
 }
 
 a.btn.btn-warning.btn-lg {
