--- a/src/app/components/pages/presenters/presenters.component.css
+++ b/src/app/components/pages/presenters/presenters.component.css
@@ -16,11 +16,17 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 1200px;
 }
 
+.image-container {
+    float: right;
+    min-height: 305px;
+}
+
 
 img.bannerPhotoURL {
     top: 0;
     left: 0;
     position: relative;
+    min-height: 350px;
     max-height: 350px;
     width: 100%;
     /*z-index: 0;*/
@@ -33,16 +39,20 @@ h1.title {
     font-weight: bold;
 }
 
-p {
-
-}
-
 .row.crumbs {
     padding: 2em 0;
 }
 
 ol.breadcrumb, li.breadcrumb-item {
     background-color: #fff;
+}
+
+.image-container {
+    float: right;
+    min-height: 305px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 img.photoURL {
@@ -69,9 +79,6 @@ h2.card-sec-title {
     line-height: 2em;
 }
 
-.card-text {
-    padding: 2em;
-}
 
 a.btn.btn-warning.btn-lg {
     background-color: #F47700;
