--- a/src/styles.css
+++ b/src/styles.css
@@ -367,10 +367,15 @@ h1, h2, h3, h4 {
     font-weight: bold;
 }
 
-h5.card-title[_ngcontent-c3] {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: bold !important;
+/* Cards */
+h5.card-title {
+    font-family: Roboto, Helvetica, Arial, sans-serif !important;
+    font-weight: 700 !important;
     font-size: 20px;
+}
+
+p.card-text {
+    padding: 0;
 }
 
 p.text-center > a.btn-warning {
