--- a/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader.component.html
+++ b/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader.component.html
@@ -6,13 +6,25 @@
                 <h1 class="text-center pb-4 pt-3 admin-badge">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                          alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                    <i class="fa fa-images"></i>&nbsp;Admin
+                    <i class="fa fa-image"></i>&nbsp;Admin
                     Image Uploader
                 </h1>
             </div>
         </div>
     </div>
 </div>
+
+
+<div class="row m-4 pl-5">
+    <div class="container">
+        <div class="offset-md-10">
+            <a [routerLink]="['/admin/images']" class="btn btn-default">
+                <i class="fa fa-images"></i>&nbsp;View Images
+            </a>
+        </div>
+    </div>
+</div>
+
 
 <div class="row">
     <div class="container">
