--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -253,7 +253,14 @@
     <li class="sidenav-item" *ngIf="isLoggedIn">
         <a [routerLink]="['/admin/image-uploader']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-images"></i>&nbsp;<span class="helv">Image Uploader</span></div>
+            <div><i class="fal fa-image"></i>&nbsp;<span class="helv">Image Uploader</span></div>
+        </a>
+    </li>
+
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/images']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-images"></i>&nbsp;<span class="helv">Images</span></div>
         </a>
     </li>
 
