--- a/src/app/components/admin/admin-core/admin-images/admin-images.component.html
+++ b/src/app/components/admin/admin-core/admin-images/admin-images.component.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="offset-md-10">
             <a [routerLink]="['/admin/image-uploader']" class="btn btn-default">
-                <i class="fa fa-image"></i>&nbsp;Upload Image
+                <i class="fa fa-cloud-upload-alt"></i>&nbsp;Upload Image
             </a>
         </div>
     </div>
