--- a/src/app/components/admin/admin-core/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin/admin-core/admin-dashboard/admin-dashboard.component.html
@@ -40,7 +40,7 @@
 </div>
 
 <!-- * Data Studio Google Analytics * -->
-<div class="row">
+<div class="row mb-5">
     <div class="container">
         <div class="offset-md-1">
             <iframe width="900" height="1200"
