--- a/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader.component.html
+++ b/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader.component.html
@@ -6,7 +6,7 @@
                 <h1 class="text-center pb-4 pt-3 admin-badge">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                          alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                    <i class="fa fa-image"></i>&nbsp;Admin
+                    <i class="fa fa-cloud-upload-alt"></i>&nbsp;Admin
                     Image Uploader
                 </h1>
             </div>
