--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -1,61 +1,7 @@
 <!-- * ADMIN-CARDS-EDIT * -->
 <!-- * Image Uploader * -->
-<div class="row mb-5 mt-5">
-    <div class="container">
-        <div class="col">
-            <div class="card image-uploader">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        Image Uploader
-                    </h5>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="custom-file">
-                                <label class="custom-file-label" *ngIf="!downloadURL">
-                                    Click To Select
-                                </label>
-                                <label class="custom-file-label text-truncate" *ngIf="downloadURL">
-                                    {{ downloadURL | async }}
-                                </label>
-                                <input type="file"
-                                       ddwDropZone
-                                       class="custom-file-input"
-                                       accept=".png, .jpg, jpeg"
-                                       (change)="uploadImage($event)">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div *ngIf="downloadURL | async as url; else loadingURL">
-                                <p class="pb-2">
-                                    <b>Copy and paste url into the Image URL input below:</b>
-                                </p>
-                                <p>
-                                    <a [href]="url">
-                                        {{ url }}
-                                    </a>
-                                </p>
-                                <p><img [src]="url" style="max-width:100px;"></p>
-                            </div>
-                            <ng-template #loadingURL>
-                                <p class="text-center text-light">
-                                    Upload Image, Then a URL will appear here. Copy and paste that link
-                                    into any Image URL to use throughout the site (cards below).
-                                </p>
-                            </ng-template>
-                        </div>
-                    </div>
-
-
-                    <div class="mt-4 mb-3" *ngIf="percentage | async as pct">
-                        <progressbar class="progress-striped active"
-                                     [value]="pct"
-                                     type="primary"><i>Image Upload {{ pct | number }}%</i>
-                        </progressbar>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="mt-5">
+    <ddw-admin-image-uploader-item></ddw-admin-image-uploader-item>
 </div>
 
 
