Made child URLs child routes linkable, updated mobile footernav links, fixed card section spacing

--- a/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader-item/admin-image-uploader-item.component.html
+++ b/src/app/components/admin/admin-core/admin-image-uploader/admin-image-uploader-item/admin-image-uploader-item.component.html
@@ -4,9 +4,9 @@
         <div class="form-group">
             <div class="card image-uploader">
                 <div class="card-body">
-                    <p class="card-title">
+                    <h4 class="card-title mt-0">
                         Image Uploader
-                    </p>
+                    </h4>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="custom-file">
