--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -69,7 +69,8 @@
 
                                     <div class="form-group" *ngIf="isExtURL">
                                         <label>External URL <br>
-                                            <p class="alert alert-info">All values are needed if this is an external URL!</p>
+                                            <p class="alert alert-info">All values are needed if this is an external
+                                                URL!</p>
                                         </label>
                                         <input type="url"
                                                class="form-control"
@@ -303,7 +304,7 @@
                                     <div class="input-group mb-3" *ngIf="hasCards && !isExtURL">
                                         <div class="input-group-prepend">
                                     <span class="input-group-text">
-                                        <i class="fa fa-h1"></i>
+                                        <i class="fa fa-h2"></i>
                                     </span>
                                         </div>
                                         <input type="text"
@@ -430,7 +431,8 @@
                                            id="published"
                                            formControlName="published">
                                     <label class="custom-control-label"
-                                           for="published"><span class="text-danger"><b>Publish</b></span> the page on "Create"?
+                                           for="published"><span class="text-danger"><b>Publish</b></span> the page on
+                                        "Create"?
                                         <br>
                                         <small>If so, page will appear according to "Publish On" date.</small>
                                     </label>
