--- a/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
+++ b/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
@@ -127,7 +127,37 @@
                     *ngIf="isLoggedIn"
                     [routerLink]="['/admin/cards']">
                 <i class="fa fa-passport"></i>&nbsp;
-                <small>Cards</small>
+                <small>Home Page Cards</small>
+            </button>
+
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/page-cards']">
+                <i class="fa fa-passport"></i>&nbsp;
+                <small>Page Cards</small>
+            </button>
+
+
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/images']">
+                <i class="fa fa-images"></i>&nbsp;
+                <small>Images</small>
+            </button>
+
+
+
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/image-uploader']">
+                <i class="fa fa-cloud-upload-alt"></i>&nbsp;
+                <small>Image Uploader</small>
             </button>
 
             <button mat-menu-item
